Fix Changes
Fix divs because they are messed up.

--- a/pc_grids.css
+++ b/pc_grids.css
@@ -12,16 +12,56 @@
 
 */
 
-
+div {
+    outline: 1px solid red;
+}
 /* Grid Rows Styles */
+div.row {
+    clear: both;
+}
 
-
+div.row::after {
+    clear: both;
+    content: "";
+    display: table;
+}
 
 
 /* Grid Columns Styles */
+div[class^="col-"] {
+    float: left;
+}
 
+div.col-1-1 {
+    width: 100%;
+}
 
+div.col-1-2 {
+    width: 50%;
+}
 
+div.col-1-3 {
+    width: 33.33%;
+}
+
+div.col-2-3 {
+    width: 66.66%;
+}
+
+div.col-1-4 {
+    width: 25%;
+}
+
+div.col-3-4 {
+    width: 75%;
+}
 
 /* Grid Outline Styles */
 
+
+/* Practice */
+section {
+    display: grid;
+    grid-template-rows: 100px auto 100px;
+    grid-template-columns: 25% 50% 25%;
+}
